--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Angular Concepts</title>
-</head>
-<body>
-<div id="root">
-  <h2>Welcome to our lean Web App</h2>
-</div>
-<script type="module" src="./src/main.ts"></script>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Angular Concepts</title>
+  </head>
+  <body>
+    <header>
+      <h1>Angular Concepts</h1>
+    </header>
+    <main>
+      <div id="root">
+        <h2>Welcome to our lean Web App</h2>
+      </div>
+      <section>
+        <article>
+          <h3>Components</h3>
+          <p>
+            Angular-Anwendungen bestehen aus Komponenten - den Haupt-Bausteinen.
+            Eine Komponente ist eine Codeklasse, die dekoriert wird als Component
+            mit einem zugeordneten HTML-Template und optional einem Selektor in
+            den Metadaten.
+          </p>
+        </article>
+      </section>
+    </main>
+    <script type="module" src="./src/main.ts"></script>
+  </body>
 </html>
