--- a/index.html
+++ b/index.html
@@ -18,9 +18,15 @@
           <h3>Components</h3>
           <p>
             Angular-Anwendungen bestehen aus Komponenten - den Haupt-Bausteinen.
-            Eine Komponente ist eine Codeklasse, die dekoriert wird als Component
-            mit einem zugeordneten HTML-Template und optional einem Selektor in
-            den Metadaten.
+            Eine Komponente ist eine Codeklasse, die dekoriert wird als
+            <code>Component</code> mit einem zugeordneten HTML-Template und
+            optional einem Selektor in den Metadaten.
+          </p>
+        </article>
+        <article>
+          <h3>Modules</h3>
+          <p>
+            Ein Modul ist eine Codeklasse dekoriert als <code>NgModule</code>.
           </p>
         </article>
       </section>
