Add module declarations.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
           <h3>Modules</h3>
           <p>
             Ein Modul ist eine Codeklasse dekoriert als <code>NgModule</code>.
+            Damit eine Komponente benutzt werden kann, muss sie in einem Modul deklariert werden.
+            Dies geschieht im Dekorator der zusammengefasst folgende Deklarationen enthält:
+            <ul>
+              <li>Komponenten, die dieses Modul deklariert</li>
+              <li>Importierte Module, die von diesem Modul benutzt werden</li>
+              <li>Komponenten, die dieses Modul zur Verwendung in anderen Modulen exportiert</li>
+              <li>Bootstrap-Komponenten (die zum Anwendungsstart benötigt werden)</li>
+            </ul>
           </p>
         </article>
       </section>
