Export component and use it in app.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,9 @@
     <title>Angular Concepts</title>
   </head>
   <body>
-    <header>
-      <h1>Angular Concepts</h1>
-    </header>
-    <main>
       <app-root></app-root>
-      <section>
+      <main class="container">
+        <section>
         <article>
           <h3>Components</h3>
           <p>
